[package]
name = "telecomande"
version = "0.1.0"
edition = "2021"
description = "A small crate providing a primitive for the execution of asynchronous tasks by managers through signals."
authors = ["JOLIMAITRE Matthieu <matthieu@imagevo.fr>"]
license = "MIT"

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
