[package]
name = "telecomande"
version = "1.2.2"
edition = "2021"
description = "A small crate providing a primitive for the execution of asynchronous tasks by processor through commands."
authors = ["JOLIMAITRE Matthieu <matthieu@imagevo.fr>"]
license = "MIT"
repository = "https://github.com/MajorBarnulf/telecomande/"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
async-trait = "0.1"
